--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1><center>RESUME</h1>
     <h2>Vandana Battula</h2>
-    <img src="../vandu.jpg" alt="profile picture" width="100" height="100">
+    <img src="vandu.jpg" alt="profile picture" width="100" height="100">
     <h2>
         contact information
     </h2>
